Preparing to add new Chinese, Korean and Vietnamese names - nothing added yet, have to finish Vietnamese surnames first.

--- a/localization/english/names/feastern_character_names_l_english.yml
+++ b/localization/english/names/feastern_character_names_l_english.yml
@@ -1197,6 +1197,7 @@
  Umanosuke:0 "Umanosuke"
  Umeji:0 "Umeji"
  Uryuu:0 "Uryū"
+ Kikyou:0 "Kikyō"
  You:0 "Yō"
  Yahiko:0 "Yahiko"
  Yahiro:0 "Yahiro"
