Finally, Chinese, Vietnamese and Korean cultures in!

--- a/localization/english/culture/feastern_cultures_l_english.yml
+++ b/localization/english/culture/feastern_cultures_l_english.yml
@@ -3,3 +3,17 @@
  japanese_group_collective_noun:0 "Japanese"
  japanese:0 "Yamato"
  japanese_collective_noun:0 "Yamato"
+ baiyue_group:0 "Baiyue"
+ baiyue_group_collective_noun:0 "Baiyue"
+ vietnamese:0 "Người Việt"
+ vietnamese_collective_noun:0 "Người Việt"
+ korean_group:0 "Goguryeo"
+ korean_group_collective_noun:0 "Goguryeo"
+ korean:0 "Goryeo-in"
+ korean_collective_noun:0 "Goryeo-in"
+ chinese_group:0 "Chinese"
+ chinese_group_collective_noun:0 "Chinese"
+ han:0 "Hànrén"
+ han_collective_noun:0 "Hànrén"
+ cantonese:0 "Yuhtyàhn"
+ cantonese_collective_noun:0 "Yuhtyàhn"
