Minor fix in localization.

--- a/localization/english/eastern_maa_innovations_l_english.yml
+++ b/localization/english/eastern_maa_innovations_l_english.yml
@@ -7,4 +7,4 @@
  innovation_rattan_shields:0 "Rattan"
  innovation_rattan_shields_desc:0 "Rattan is a very hardy type of wood cultivated in South East Asia - shields and spears alike are made out of it. Shields made from rattan are both hardy and lightweight at the same time, providing excellent protection for archers."
  innovation_hwacha:0 "Rocket Assembly"
- innovation_hwacha_shields_desc:0 "Rockets were among the first type of gunpowder weaponry invented, but their usefullness in battle always left something to be desired - until some people got crazy enough to put many of them together..."
+ innovation_hwacha_desc:0 "Rockets were among the first type of gunpowder weaponry invented, but their usefullness in battle always left something to be desired - until some people got crazy enough to put many of them together..."
