Added Kaifeng Jews. Planning to reintroduce Jewish courtier events from CK2.

--- a/localization/english/culture/feastern_cultures_l_english.yml
+++ b/localization/english/culture/feastern_cultures_l_english.yml
@@ -15,5 +15,7 @@
  chinese_group_collective_noun:0 "Chinese"
  han:0 "Hànrén"
  han_collective_noun:0 "Hànrén"
+ kaifeng_jew:0 "Yóutàirén"
+ kaifeng_jew_collective_noun:0 "Yóutàirén"
  cantonese:0 "Yuhtyàhn"
  cantonese_collective_noun:0 "Yuhtyàhn"
