Gitanos are now Calé

--- a/localization/english/culture/gypsy_cultures_l_english.yml
+++ b/localization/english/culture/gypsy_cultures_l_english.yml
@@ -15,8 +15,8 @@
  gypsy_slav_collective_noun:0 "Cigan"
  gypsy_greek:0 "Athigan"
  gypsy_greek_collective_noun:0 "Athiganoi"
- gypsy_iberian:0 "Gitano"
- gypsy_iberian_collective_noun:0 "Gitanos"
+ gypsy_iberian:0 "Calé"
+ gypsy_iberian_collective_noun:0 "Calé"
  gypsy_french:0 "Manouche"
  gypsy_french_collective_noun:0 "Manouches"
  gypsy_italian:0 "Sinti"
