--- a/localization/english/decisions_gypsy_jew_courtier_l_english.yml
+++ b/localization/english/decisions_gypsy_jew_courtier_l_english.yml
@@ -28,3 +28,22 @@
  hire_gypsy_spymaster_iberia:0 "Hire Gypsy Spymaster"
  hire_gypsy_spymaster_france:0 "Hire Gypsy Spymaster"
  hire_gypsy_spymaster_italy:0 "Hire Gypsy Spymaster"
+ hire_jewish_spymaster_ashkenazi_confirm:0 "Hire Jewish Spymaster"
+ hire_jewish_spymaster_sephardi_confirm:0 "Hire Jewish Spymaster"
+ hire_jewish_spymaster_kaifeng_confirm:0 "Hire Jewish Spymaster"
+ hire_jewish_steward_ashkenazi_confirm:0 "Hire Jewish Steward"
+ hire_jewish_steward_sephardi_confirm:0 "Hire Jewish Steward"
+ hire_jewish_steward_kaifeng_confirm:0 "Hire Jewish Steward"
+ hire_jewish_diplomat_ashkenazi_confirm:0 "Hire Jewish Diplomat"
+ hire_jewish_diplomat_sephardi_confirm:0 "Hire Jewish Diplomat"
+ hire_jewish_diplomat_kaifeng_confirm:0 "Hire Jewish Diplomat"
+ hire_gypsy_spymaster_india_confirm:0 "Hire Gypsy Spymaster"
+ hire_gypsy_spymaster_egypt_confirm:0 "Hire Gypsy Spymaster"
+ hire_gypsy_spymaster_caucasus_confirm:0 "Hire Gypsy Spymaster"
+ hire_gypsy_spymaster_hun_confirm:0 "Hire Gypsy Spymaster"
+ hire_gypsy_spymaster_romania_confirm:0 "Hire Gypsy Spymaster"
+ hire_gypsy_spymaster_slav_confirm:0 "Hire Gypsy Spymaster"
+ hire_gypsy_spymaster_greece_confirm:0 "Hire Gypsy Spymaster"
+ hire_gypsy_spymaster_iberia_confirm:0 "Hire Gypsy Spymaster"
+ hire_gypsy_spymaster_france_confirm:0 "Hire Gypsy Spymaster"
+ hire_gypsy_spymaster_italy_confirm:0 "Hire Gypsy Spymaster"
