--- a/localization/english/religion/far_eastern_doctrines_l_english.yml
+++ b/localization/english/religion/far_eastern_doctrines_l_english.yml
@@ -4,3 +4,8 @@
  special_doctrine_turan_name:0 "Turanian Brotherhood"
  special_doctrine_turan_desc:0 "Turanian peoples stick together!"
  doctrine_parameter_hostility_override_special_doctrine_turan:0 "Other Turanian [faiths|E] with the $special_doctrine_turan_name$ doctrine are considered [GetHostilityLevelName( FAITH_DOCTRINE_PARAMETER.GetIntValue )|V] instead of [GetHostilityLevelName( '(int32)3' )|V]"
+ hellenic_tolerance_name:0 "Hellenistic Syncretism"
+ hellenic_tolerance_desc:0 "Syncretism was common during the Hellenistic period, with rulers regularly identifying local deities in various parts of their domains with the relevant god or goddess of the Greek Pantheon as a means of increasing the cohesion of their kingdom."
+ special_doctrine_hellenic_name:0 "Hellenistic Syncretism"
+ special_doctrine_hellenic_desc:0 "Syncretism was common during the Hellenistic period, with rulers regularly identifying local deities in various parts of their domains with the relevant god or goddess of the Greek Pantheon as a means of increasing the cohesion of their kingdom."
+ doctrine_parameter_hostility_override_special_doctrine_turan:0 "Other Hellenistic [faiths|E] with the $special_doctrine_hellenic_name$ doctrine are considered [GetHostilityLevelName( FAITH_DOCTRINE_PARAMETER.GetIntValue )|V] instead of [GetHostilityLevelName( '(int32)3' )|V]"
