--- a/localization/english/religion/religion_dead_l_english.yml
+++ b/localization/english/religion/religion_dead_l_english.yml
@@ -107,6 +107,13 @@
  old_south_arabian_adherent:0 "Old Arabian"
  old_south_arabian_adherent_plural:0 "Old Arabians"
  romancult:0 "Religio Romana"
+ romancult_adj:0 "Roman"
+ romancult_adherent:0 "Roman"
+ romancult_adherent_plural:0 "Roman"
+ old_romancult:0 "Religio Romana Archaica"
+ old_romancult_adj:0 "Old Roman"
+ old_romancult_adherent:0 "Old Roman"
+ old_romancult_adherent_plural:0 "Old Roman"
  romancult_desc:0 "The Imperial cult of ancient Rome identified emperors and some members of their families with the divinely sanctioned authority of the Roman State. The framework for the Imperial cult was formulated during the early Principate of Augustus, and was rapidly established throughout the Empire and its provinces, with marked local variations in its reception and expression. As Roman society evolved, so did cult to emperors - both proved remarkably resilient and adaptable. Until its confrontation by fully developed Christian orthodoxy, Imperial cult needed no systematic or coherent theology. Its part in Rome's continued success was probably sufficient to justify, sanctify and explain it to most Romans."
  numenism:0 "Disciplina Etrusca"
  numenism_adj:0 "Etruscan"
