Some fixes at localization

--- a/localization/english/religion/religion_dead_l_english.yml
+++ b/localization/english/religion/religion_dead_l_english.yml
@@ -49,6 +49,7 @@
  atenism_adj:0 "Atenist"
  atenism_adherent:0 "Atenist"
  atenism_adherent_plural:0 "Atenists"
+ atenism_pagan_desc:0 "Atenism refers to a religion and the religious changes associated with the ancient Egyptian Eighteenth Dynasty pharaoh Akhenaten. The religion centered on the cult of the god Aten, the disc of the Sun and originally an aspect of the traditional solar deity Ra. In the 14th century BC, Atenism was Egypt's state religion for about 20 years, before subsequent rulers returned to the traditional polytheistic religion and the pharaohs associated with Atenism were erased from Egyptian records."
  old_atenism:0 "Yaw Maataw Yátin"
  old_atenism_adj:0 "Old Atenist"
  old_atenism_adherent:0 "Old Atenist"
@@ -79,7 +80,7 @@
  old_celtic_faith_adj:0 "Hen Ffydd"
  old_celtic_faith_adherent:0 "Hen Ffyddist"
  old_celtic_faith_adherent_plural:0 "Hen Ffyddists"
- canaanism:0 "Emunah Kənáʿanim"
+ canaanism:0 "Emunah Kana'anim"
  canaanism_adj:0 "Canaanite"
  canaanism_adherent:0 "Canaanite"
  canaanism_adherent_plural:0 "Canaanites"
