--- a/localization/english/religion/religion_dead_l_english.yml
+++ b/localization/english/religion/religion_dead_l_english.yml
@@ -49,7 +49,7 @@
  atenism_adj:0 "Atenist"
  atenism_adherent:0 "Atenist"
  atenism_adherent_plural:0 "Atenists"
- atenism_pagan_desc:0 "Atenism refers to a religion and the religious changes associated with the ancient Egyptian Eighteenth Dynasty pharaoh Akhenaten. The religion centered on the cult of the god Aten, the disc of the Sun and originally an aspect of the traditional solar deity Ra. In the 14th century BC, Atenism was Egypt's state religion for about 20 years, before subsequent rulers returned to the traditional polytheistic religion and the pharaohs associated with Atenism were erased from Egyptian records."
+ atenism_desc:0 "Atenism refers to a religion and the religious changes associated with the ancient Egyptian Eighteenth Dynasty pharaoh Akhenaten. The religion centered on the cult of the god Aten, the disc of the Sun and originally an aspect of the traditional solar deity Ra. In the 14th century BC, Atenism was Egypt's state religion for about 20 years, before subsequent rulers returned to the traditional polytheistic religion and the pharaohs associated with Atenism were erased from Egyptian records."
  old_atenism:0 "Yaw Maataw Yátin"
  old_atenism_adj:0 "Old Atenist"
  old_atenism_adherent:0 "Old Atenist"
@@ -434,29 +434,29 @@
  basque_aatxe_name_possessive:0 "Aatxe's" # a cave-dwelling spirit who adopts the form of a young red bull, but being a shapeshifter, sometimes takes the shape of a man.."
  basque_akerbeltz_name:0 "Akerbeltz" # demonic spirit in the form of a billy goat."
  basque_akerbeltz_name_possessive:0 "Akerbeltz's" # demonic spirit in the form of a billy goat."
- knossos:0 "Knossos"
- ravenna:0 "Ravenna"
- nemausus:0 "Nemausus"
- viesul:0 "Viesul"
- raetia:0 "Raetia"
- curia_raetorum:0 "Curia Raetorum"
- lemnos:0 "Lemnos"
- tyre:0 "Ṣūr"
- aden:0 "ʿAdan"
- nafarroa:0 "Iruña"
- bizkaia:0 "Bilbo"
- baiona:0 "Baiona"
- bordele:0 "Bordele"
- andorra:0 "Andorra"
- thebes:0 "Waset"
- akhetaten:0 "Akhetaten"
- giza:0 "Giza"
- carnutes:0 "Carnutes"
- ynis_mon:0 "Ynys Môn"
- stonehenge:0 "Stonehenge"
- lugo:0 "Lugo"
- lia_fail:0 "Lia Fáil"
- vannes:0 "Gwened"
+ holy_site_knossos_name:0 "Knossos"
+ holy_site_ravenna_name:0 "Ravenna"
+ holy_site_nemausus_name:0 "Nemausus"
+ holy_site_viesul_name:0 "Viesul"
+ holy_site_raetia_name:0 "Raetia"
+ holy_site_curia_name_raetorum:0 "Curia Raetorum"
+ holy_site_lemnos_name:0 "Lemnos"
+ holy_site_tyre_name:0 "Ṣūr"
+ holy_site_aden_name:0 "ʿAdan"
+ holy_site_nafarroa_name:0 "Iruña"
+ holy_site_bizkaia_name:0 "Bilbo"
+ holy_site_baiona_name:0 "Baiona"
+ holy_site_bordele_name:0 "Bordele"
+ holy_site_andorra_name:0 "Andorra"
+ holy_site_thebes_name:0 "Waset"
+ holy_site_akhetaten_name:0 "Akhetaten"
+ holy_site_giza_name:0 "Giza"
+ holy_site_carnutes_name:0 "Carnutes"
+ holy_site_ynis_mon_name:0 "Ynys Môn"
+ holy_site_stonehenge_name:0 "Stonehenge"
+ holy_site_lugo_name:0 "Lugo"
+ holy_site_lia_fail_name:0 "Lia Fáil"
+ holy_site_vannes_name:0 "Gwened"
  celtic_nudd_name:0 "Nudd" # celtic high god
  celtic_nudd_name_possessive:0 "Nudd's" # celtic high god
  celtic_modron_name:0 "Modron" # celtic mother goddess
