Proper colours assigned to religions.

--- a/localization/english/decisions_gypsy_jew_courtier_l_english.yml
+++ b/localization/english/decisions_gypsy_jew_courtier_l_english.yml
@@ -1,4 +1,6 @@
 ﻿l_english:
+ jew_backstory:0 "Legally banned from owning land, prohibited from virtually all professions save for banking and trade, often voluntarily self-segregated from mainstream society, the Jews were always viewed with suspicion and jealousy at best, and with outright hatred and libellous accusations at worst - however, what doesn't kill you, makes you stronger, and all the pogroms and discrimination have only helped to make the Jewish community one of hardy survivors.\nIt may upset several of our constituents, but we could 'raid' the Jewish quarters for hidden talent - after all, desperate times call for desperate measures, right?"
+ gypsy_backstory:0 "The Gypsies are a nomadic group of people believed to be light-fingered, clannish, secretive and enigmatic, earning their daily bread by making music, fortune-telling and and relieving the unsuspecting gadjo of their property.\nWhile it may upset several of our constituents, we could employ one of them to oversee our more clandestine operations."
  hire_jewish_spymaster_ashkenazi:0 "Hire Jewish Spymaster"
  hire_jewish_spymaster_sephardi:0 "Hire Jewish Spymaster"
  hire_jewish_spymaster_kaifeng:0 "Hire Jewish Spymaster"
@@ -9,14 +11,14 @@
  hire_jewish_diplomat_sephardi:0 "Hire Jewish Diplomat"
  hire_jewish_diplomat_kaifeng:0 "Hire Jewish Diplomat"
  hire_jewish_spymaster_tooltip:0 "Hire a Jewish Spymaster."
- hire_jewish_spymaster_decision_desc:0 "Hire a Jewish Spymaster."
- hire_jewish_steward_decision_desc:0 "Hire a Jewish Steward."
+ hire_jewish_spymaster_decision_desc:0 "$jew_backstory$"
  hire_jewish_steward_tooltip:0 "Hire a Jewish Steward."
- hire_jewish_diplomat_decision_desc:0 "Hire a Jewish Diplomat."
+ hire_jewish_steward_decision_desc:0 "$jew_backstory$"
  hire_jewish_diplomat_tooltip:0 "Hire a Jewish Diplomat."
+ hire_jewish_diplomat_decision_desc:0 "$jew_backstory$"
  hire_jew_decision_effect_tooltip:0 "You won't be able to do this again for 10 years."
  hire_gypsy_decision_effect_tooltip:0 "You won't be able to do this again for 10 years."
- hire_gypsy_spymaster_decision_desc:0 "Hire a Gypsy Spymaster."
+ hire_gypsy_spymaster_decision_desc:0 "$gypsy_backstory$"
  hire_gypsy_spymaster_tooltip:0 "Hire a Gypsy Spymaster."
  hire_gypsy_spymaster_india:0 "Hire Gypsy Spymaster"
  hire_gypsy_spymaster_egypt:0 "Hire Gypsy Spymaster"
