Now Gypsies and Jews can be expelled.

--- a/localization/english/decisions_gypsy_jew_courtier_l_english.yml
+++ b/localization/english/decisions_gypsy_jew_courtier_l_english.yml
@@ -49,3 +49,59 @@
  hire_gypsy_spymaster_iberia_confirm:0 "Hire Gypsy Spymaster"
  hire_gypsy_spymaster_france_confirm:0 "Hire Gypsy Spymaster"
  hire_gypsy_spymaster_italy_confirm:0 "Hire Gypsy Spymaster"
+ expel_the_jews:0 "Expel the Jews"
+ expel_the_jews_tooltip:0 "Expel the Jews"
+ expel_the_jews_confirm:0 "Expel the Jews"
+ expel_the_jews_decision_desc:0 "The Jews have always been an alien people in our state - not only that, many of our constituents are blaming them for... all sorts of problems. Perhaps it would be for the best, if we expelled them?"
+ expel_the_gypsies:0 "Expel the Gypsies"
+ expel_the_gypsies_tooltip:0 "Expel the Gypsies"
+ expel_the_gypsies_confirm:0 "Expel the Gypsies"
+ expel_the_gypsies_decision_desc:0 "The Gypsies have always been an alien people in our state - not only that, many of our constituents are blaming them for... all sorts of problems. Perhaps it would be for the best, if we expelled them?"
+ welcome_the_jews:0 "Welcome the Jews"
+ welcome_the_jews_tooltip:0 "Welcome the Jews"
+ welcome_the_jews_confirm:0 "Welcome the Jews"
+ welcome_the_jews_decision_desc:0 "The Jews were blamed for all sorts of things, but is it true? Perhaps it would be for the best, if we were to give them another a chance."
+ welcome_the_gypsies:0 "Welcome the Gypsies"
+ welcome_the_gypsies_tooltip:0 "Welcome the Gypsies"
+ welcome_the_gypsies_confirm:0 "Welcome the Gypsies"
+ welcome_the_gypsies_decision_desc:0 "The Gypsies were blamed for all sorts of things, but is it true? Perhaps it would be for the best, if we were to give them another a chance."
+ jewish_courtier.0005:0 "Expulsion of the Jews!"
+ jewish_courtier.0006:0 "Liege is expelling the Jews"
+ jewish_courtier.0007:0 "Jews welcomed back"
+ jewish_courtier.0008:0 "Liege is welcomg back the Jews"
+ jewish_courtier.0005.t:0 "Expulsion of the Jews!"
+ jewish_courtier.0006.t:0 "Liege is expelling the Jews!"
+ jewish_courtier.0007.t:0 "Jews welcomed back"
+ jewish_courtier.0008.t:0 "Liege is welcomg back the Jews"
+ jewish_courtier.0005.desc:0 "You have decided to expel all Jews from your realm. After your guards round the Jewry up, they are forced to depart in yet another large exodus for lands more friendly to their kind. They are allowed to keep many of their belongings, but you confiscate much of their gold."
+ jewish_courtier.0006.desc:0 "Your liege, [top_liege|E], has issued a decree calling for the expulsion of all unlanded Jews from the entire realm, citing various grievances committed by them against the Crown."
+ jewish_courtier.0007.desc:0 "Jews have been banned from your realm for some time, but strangely this seems to have had no effect on many of the malaises they were thought responsible for, such as famines and disease. By now most Jews seem to have forgiven your offenses, and you have decided to welcome them back with open arms."
+ jewish_courtier.0008.desc:0 "Your liege, [top_liege|E], has decided to rescind the decree calling for the expulsion of all Jews. They are now once more permitted to live and work within the borders of the realm."
+ jewish_courtier.0005.a:0 "Begone, foul Hebrews!"
+ jewish_courtier.0006.a:0 "Oh well, at least my debts are null and void..."
+ jewish_courtier.0007.a:0 "Welcome back, noble sons of Abraham..."
+ jewish_courtier.0008.a:0 "I wonder how long this will last."
+ gypsy_courtier.0005:0 "Expulsion of the Gypsies!"
+ gypsy_courtier.0006:0 "Liege is expelling the Gypsies"
+ gypsy_courtier.0007:0 "Gypsies welcomed back"
+ gypsy_courtier.0008:0 "Liege is welcomg back the Gypsies"
+ gypsy_courtier.0005.t:0 "Expulsion of the Gypsies!"
+ gypsy_courtier.0006.t:0 "Liege is expelling the Gypsies!"
+ gypsy_courtier.0007.t:0 "Gypsies welcomed back"
+ gypsy_courtier.0008.t:0 "Liege is welcomg back the Gypsies"
+ gypsy_courtier.0005.desc:0 "You have decided to expel all Gypsies from your realm. After your guards round the Gypsies up, they are forced to depart in yet another large exodus for lands more friendly to their kind. They are allowed to keep many of their belongings, but you confiscate much of their gold."
+ gypsy_courtier.0006.desc:0 "Your liege, [top_liege|E], has issued a decree calling for the expulsion of all unlanded Gypsies from the entire realm, citing various grievances committed by them against the Crown."
+ gypsy_courtier.0007.desc:0 "Gypsies have been banned from your realm for some time, but strangely this seems to have had no effect on many of the malaises they were thought responsible for, such as famines and disease. By now most Gypsies seem to have forgiven your offenses, and you have decided to welcome them back with open arms."
+ gypsy_courtier.0008.desc:0 "Your liege, [top_liege|E], has decided to rescind the decree calling for the expulsion of all Gypsies. They are now once more permitted to live and work within the borders of the realm."
+ gypsy_courtier.0005.a:0 "Begone, foul thieves!"
+ gypsy_courtier.0006.a:0 "This might bring stability to the realm."
+ gypsy_courtier.0007.a:0 "Welcome back."
+ gypsy_courtier.0008.a:0 "I wonder how long this will last."
+ jews_are_expelled:0 "All unlanded Jews are expelled from the realm."
+ gypsies_are_expelled:0 "All unlanded Gypsies are expelled from the realm."
+ expelled_the_jews:0 "Expelled the Jews"
+ expelled_the_jews_modifier:0 "Expelled the Jews"
+ expelled_the_gypsies:0 "Expelled the Gypsies"
+ expelled_the_gypsies_modifier:0 "Expelled the Gypsies"
+ borrowed_from_jews:0 "Borrowed from Jewish Moneylenders"
+ borrowed_from_jews_modifier:0 "Borrowed from Jewish Moneylenders"
