Now you can borrow money from Jewish Moneylenders.

--- a/localization/english/decisions_gypsy_jew_courtier_l_english.yml
+++ b/localization/english/decisions_gypsy_jew_courtier_l_english.yml
@@ -105,3 +105,11 @@
  expelled_the_gypsies_modifier:0 "Expelled the Gypsies"
  borrowed_from_jews:0 "Borrowed from Jewish Moneylenders"
  borrowed_from_jews_modifier:0 "Borrowed from Jewish Moneylenders"
+ borrow_jewish_money:0 "Borrow from Jewish Moneylenders"
+ borrow_jewish_money_tooltip:0 "Borrow from Jewish Moneylenders"
+ borrow_jewish_money_confirm:0 "Borrow from Jewish Moneylenders"
+ borrow_jewish_money_desc:0 "What is a claim, when you can't pay your army? Shekels can be the greatest army.\nYour friends may offer you some troops, but shekels can be even dearer friends, especially when there are many, many of them."
+ give_back_jewish_money:0 "Give back the money to Jewish Moneylenders"
+ give_back_jewish_money_tooltip:0 "Give back the money to Jewish Moneylenders"
+ give_back_jewish_money_confirm:0 "Give back the money to Jewish Moneylenders"
+ give_back_jewish_money_desc:0 "There is no such thing as free money, and what was borrowed, has to be given back at one point - perhaps this might be that point?"
