--- a/localization/english/culture/feastern_cultures_l_english.yml
+++ b/localization/english/culture/feastern_cultures_l_english.yml
@@ -19,7 +19,7 @@
  kaifeng_jew_collective_noun:0 "Yóutàirén"
  cantonese:0 "Yuhtyàhn"
  cantonese_collective_noun:0 "Yuhtyàhn"
- azeri_turkish:1 "Azəri"
- azeri_turkish_collective_noun:2 "Azərilər"
+ azeri_turkish:1 "Azëri"
+ azeri_turkish_collective_noun:2 "Azërilər"
  anatolian_turkish:1 "Türk"
  anatolian_turkish_collective_noun:2 "Türkler"
