--- a/localization/english/culture/feastern_cultures_l_english.yml
+++ b/localization/english/culture/feastern_cultures_l_english.yml
@@ -3,6 +3,8 @@
  japanese_group_collective_noun:0 "Japanese"
  japanese:0 "Yamato"
  japanese_collective_noun:0 "Yamato"
+ ainu:0 "Aynu"
+ ainu_collective_noun:0 "Aynus"
  baiyue_group:0 "Baiyue"
  baiyue_group_collective_noun:0 "Baiyue"
  vietnamese:0 "Người Việt"
