--- a/localization/english/names/japanese_character_names_l_english.yml
+++ b/localization/english/names/japanese_character_names_l_english.yml
@@ -1778,3 +1778,81 @@
  Yuuna:0 "Yūna"
  Yuyuko:0 "Yuyuko"
  Eirin:0 "Ērin"
+ Abenanka:0 "Abenanka"
+ Akihi:0 "Akihi"
+ Asir_Rera:0 "Asir Rera"
+ Aterui:0 "Aterui"
+ Atuy:0 "Atuy"
+ Auta:0 "Auta"
+ Ayai:0 "Ayai"
+ Benkei:0 "Benkei"
+ Beramonkoro:0 "Beramonkoro"
+ Betsu:0 "Betsu"
+ Bikki:0 "Bikki"
+ Chikap:0 "Chikap"
+ Chinita:0 "Chinita"
+ Ekashi:0 "Ekashi"
+ Ekashiba:0 "Ekashiba"
+ Esohrankemah:0 "Esohrankemah"
+ Esohranma:0 "Esohranma"
+ Etunrachich:0 "Etunrachich"
+ Fusa:0 "Fusa"
+ Hae:0 "Hae"
+ Hakumakle:0 "Hakumakle"
+ Harukor:0 "Harukor"
+ Hennauke:0 "Hennauke"
+ Horpecha:0 "Horpecha"
+ Hotene:0 "Hotene"
+ Huisak:0 "Huisak"
+ Husko:0 "Husko"
+ Imekanu:0 "Imekanu"
+ Isonash:0 "Isonash"
+ Itakshir:0 "Itakshir"
+ Kakizaki:0 "Kakizaki"
+ Kakula:0 "Kakula"
+ Kamokutain:0 "Kamokutain"
+ Kamuima:0 "Kamuima"
+ Kinalabukk:0 "Kinalabukk"
+ Koshamain:0 "Koshamain"
+ Kurasi:0 "Kurasi"
+ Kuuchinklo:0 "Kuuchinklo"
+ Kuuklekle:0 "Kuuklekle"
+ Mennaukei:0 "Mennaukei"
+ Monashir:0 "Monashir"
+ Muisashimats:0 "Muisashimats"
+ Niutanimats:0 "Niutanimats"
+ Oki:0 "Oki"
+ Onibishi:0 "Onibishi"
+ Opere:0 "Opere"
+ Otona:0 "Otona"
+ Pasekur:0 "Pasekur"
+ Penri:0 "Penri"
+ Pettennouk:0 "Pettennouk"
+ Piripos:0 "Piripos"
+ Poiyaunpe:0 "Poiyaunpe"
+ Ponni:0 "Ponni"
+ Ponyanpe:0 "Ponyanpe"
+ Pukusa:0 "Pukusa"
+ Resak:0 "Resak"
+ Resunotek:0 "Resunotek"
+ Sahpo:0 "Sahpo"
+ Sannyoaino:0 "Sannyoaino"
+ Saru:0 "Saru"
+ Shakushain:0 "Shakushain"
+ Shibushari:0 "Shibushari"
+ Shinda:0 "Shinda"
+ Shiraoi:0 "Shiraoi"
+ Shirokani:0 "Shirokani"
+ Sisiratoka:0 "Sisiratoka"
+ Tahkonanna:0 "Tahkonanna"
+ Takatsuki:0 "Takatsuki"
+ Tanashagashi:0 "Tanashagashi"
+ Tanelankemats:0 "Tanelankemats"
+ Tarikonna:0 "Tarikonna"
+ Tekakunkemah:0 "Tekakunkemah"
+ Toacano:0 "Toacano"
+ Toitoi:0 "Toitoi"
+ Turushino:0 "Turushino"
+ Turushno:0 "Turushno"
+ Usu:0 "Usu"
+ Yayomanekuh:0 "Yayomanekuh"
