Added Malay culture.

--- a/localization/english/culture/feastern_cultures_l_english.yml
+++ b/localization/english/culture/feastern_cultures_l_english.yml
@@ -25,3 +25,9 @@
  azeri_turkish_collective_noun:2 "Azërilər"
  anatolian_turkish:1 "Türk"
  anatolian_turkish_collective_noun:2 "Türkler"
+ austronesian_group:0 "Austronesian"
+ austronesian_group_collective_noun:0 "Austronesian"
+ malay:0 "Malay"
+ malay_collective_noun:0 "Malay"
+ javanese:0 "Javanese"
+ javanese_collective_noun:0 "Javanese"
