--- a/localization/english/names/malay_character_names_l_english.yml
+++ b/localization/english/names/malay_character_names_l_english.yml
@@ -19,10 +19,12 @@
  Adiputeri:0 "Adiputeri"
  Adiputra:0 "Adiputra"
  Adiputri:0 "Adiputri"
+ Adityo:0 "Adityo"
  Agung:0 "Agung"
  Agus:0 "Agus"
  Ahad:0 "Ahad"
  Ahmad:0 "Ahmad"
+ Airlangga:0 "Airlangga"
  Aishah:0 "Aishah"
  Aisyah:0 "Aisyah"
  Al_ad_Dn:0 "Alâ' ad-Dîn"
@@ -32,37 +34,60 @@
  Amir_Hamza:0 "Amir Hamza"
  Amirul_Umara:0 "Amirul Umara"
  Amritpal:0 "Amritpal"
+ Andi:0 "Andi"
  Andika:0 "Andika"
+ Andini:0 "Andini"
  Anela:0 "Anela"
+ Anggara:0 "Anggara"
+ Anggraini:0 "Anggraini"
  Anuar:0 "Anuar"
+ Arbi:0 "Arbi"
+ Ardi:0 "Ardi"
+ Arga:0 "Arga"
+ Argo:0 "Argo"
+ Ari:0 "Ari"
+ Aryo:0 "Aryo"
+ Asmoro:0 "Asmoro"
+ Astuti:0 "Astuti"
  Atan:0 "Atan"
+ Atmojo:0 "Atmojo"
  Awang:0 "Awang"
  Ayu:0 "Ayu"
  Azimuddin:0 "Azimuddin"
  Azura:0 "Azura"
  Baba:0 "Baba"
  Bachok:0 "Bachok"
+ Baderan:0 "Baderan"
  Bagus:0 "Bagus"
  Bambang:0 "Bambang"
  Banten:0 "Banten"
+ Baskoro:0 "Baskoro"
  Basuki:0 "Basuki"
  Batara_Gowa:0 "Batara Gowa"
  Batarah_Shah_Tengah:0 "Batarah Shah Tengah"
+ Batman:0 "Batman"
  Bayu:0 "Bayu"
  Benderang:0 "Benderang"
  Berahim:0 "Berahim"
  Bestari:0 "Bestari"
  Bijaya:0 "Bijaya"
+ Bimo:0 "Bimo"
  Bintang:0 "Bintang"
+ Boediono:0 "Boediono"
  Budi:0 "Budi"
+ Budianto:0 "Budianto"
  Budiarto:0 "Budiarto"
+ Budiharto:0 "Budiharto"
+ Budiono:0 "Budiono"
  Bujang:0 "Bujang"
  Bulan:0 "Bulan"
  Bulkiah:0 "Bulkiah"
  Bunga:0 "Bunga"
  Burnei:0 "Burnei"
  Butuan:0 "Butuan"
+ Buwono:0 "Buwono"
  Cahaya:0 "Cahaya"
+ Cahyono:0 "Cahyono"
  Chahaya:0 "Chahaya"
  Che:0 "Che"
  Chempaka:0 "Chempaka"
@@ -72,10 +97,12 @@
  Cik:0 "Cik"
  Cinta:0 "Cinta"
  Cirebon:0 "Cirebon"
+ Condro:0 "Condro"
  Danang:0 "Danang"
  Danial:0 "Danial"
  Daniel:0 "Daniel"
  Dara:0 "Dara"
+ Darmo:0 "Darmo"
  Daud:0 "Daud"
  Daut:0 "Daut"
  Dayang:0 "Dayang"
@@ -87,15 +114,25 @@
  Desa:0 "Desa"
  Dewi:0 "Dewi"
  Dian:0 "Dian"
+ Didik:0 "Didik"
+ Djoko:0 "Djoko"
+ Djoyosuroto:0 "Djoyosuroto"
  Dollah:0 "Dollah"
  Dumadi:0 "Dumadi"
+ Edhi:0 "Edhi"
+ Edhie:0 "Edhie"
  Embong:0 "Embong"
  Embun:0 "Embun"
+ Endah:0 "Endah"
+ Endang:0 "Endang"
+ Erlangga:0 "Erlangga"
  Esah:0 "Esah"
  Fakhr:0 "Fakhr"
  Farhana:0 "Farhana"
  Farhanah:0 "Farhanah"
  Gadzabadi:0 "Gadzabadi "
+ Galih:0 "Galih"
+ Galuh:0 "Galuh"
  Gana:0 "Gana"
  Garuda:0 "Garuda"
  Girindrawardhana:0 "Girindrawardhana"
@@ -103,16 +140,27 @@
  Golok:0 "Golok"
  Gombak:0 "Gombak"
  Gunungjati:0 "Gunungjati"
+ Guret:0 "Guret"
  Hamaza_Tumammalianga:0 "Hamaza Tumammalianga"
  Hamengku:0 "Hamengku"
+ Hamengkubuwono:0 "Hamengkubuwono"
+ Handayani:0 "Handayani"
  Hapsah:0 "Hapsah"
+ Harjo:0 "Harjo"
  Haron:0 "Haron"
+ Harto:0 "Harto"
+ Hartono:0 "Hartono"
  Harum:0 "Harum"
  Harun:0 "Harun"
  Haryati:0 "Haryati"
+ Haryo:0 "Haryo"
+ Haryono:0 "Haryono"
  Hasan:0 "Hasan"
+ Hastuti:0 "Hastuti"
  Hayam_Wuruk:0 "Hayam Wuruk"
  Hayati:0 "Hayati"
+ Hayu:0 "Hayu"
+ Hendro:0 "Hendro"
  Heryati:0 "Heryati"
  Hitam:0 "Hitam"
  Husayn_Al_Riyat:0 "Husayn 'Alî Ri'âyat"
@@ -127,6 +175,7 @@
  Iskandar_Tan:0 "Iskandar Tanî"
  Isnin:0 "Isnin"
  Izzati:0 "Izzati"
+ Jaka:0 "Jaka"
  Jalak:0 "Jalak"
  Jambi:0 "Jambi"
  Jantan:0 "Jantan"
@@ -137,6 +186,7 @@
  Jiwa:0 "Jiwa"
  Johan:0 "Johan"
  Johor:0 "Johor"
+ Joko:0 "Joko"
  Jumaat:0 "Jumaat"
  Jusoh:0 "Jusoh"
  Juwita:0 "Juwita"
@@ -164,20 +214,33 @@
  Kesuma:0 "Kesuma"
  Khamis:0 "Khamis"
  Khatijah:0 "Khatijah"
+ Kiaidemak:0 "Kiaidemak"
  Kipli:0 "Kipli"
+ Kirono:0 "Kirono"
+ Kresno:0 "Kresno"
+ Krisno:0 "Krisno"
+ Krisnobroto:0 "Krisnobroto"
+ Kristiono:0 "Kristiono"
+ Kuat:0 "Kuat"
  Kuching:0 "Kuching"
  Kulup:0 "Kulup"
  Kuntum:0 "Kuntum"
+ Kusno:0 "Kusno"
+ Kusumo:0 "Kusumo"
  Kutai:0 "Kutai"
  Labuh:0 "Labuh"
+ Laksono:0 "Laksono"
  Lanang:0 "Lanang"
  Lanao:0 "Lanao"
+ Larasati:0 "Larasati"
  Latipah:0 "Latipah"
  Lekir:0 "Lekir"
  Lekiu:0 "Lekiu"
  Leman:0 "Leman"
+ Lesmana:0 "Lesmana"
  Limbangparang:0 "Limbangparang"
  Linda:0 "Linda"
+ Lintang:0 "Lintang"
  Lokman:0 "Lokman"
  Lukman:0 "Lukman"
  Luncai:0 "Luncai"
@@ -207,6 +270,7 @@
  Mayang_Sari:0 "Mayang Sari"
  Megat:0 "Megat"
  Megat_Iskander:0 "Megat Iskander"
+ Mego:0 "Mego"
  Melaka:0 "Melaka"
  Melati:0 "Melati"
  Melur:0 "Melur"
@@ -219,6 +283,7 @@
  Metetini:0 "Metetini"
  Minah:0 "Minah"
  Miri:0 "Miri"
+ Modjo:0 "Modjo"
  Moea:0 "Moea"
  Moeata:0 "Moeata"
  Moerani:0 "Moerani"
@@ -244,22 +309,32 @@
  Muizz_ud_Din_Bantilan:0 "Muizz ud Din Bantilan"
  Muizz_ul_Din:0 "Muizz ul Din"
  Muizz_ul_Mutawadiin:0 "Muizz ul Mutawadiin"
+ Muji:0 "Muji"
+ Mujiono:0 "Mujiono"
  Mulia:0 "Mulia"
+ Mulyono:0 "Mulyono"
  Munah:0 "Munah"
  Murni:0 "Murni"
+ Mursiyem:0 "Mursiyem"
  Mustafa_Shafi:0 "Mustafa Shafi"
  Muwallit_Wasit:0 "Muwallit Wasit"
  Muzaffar_Shh:0 "Muzaffar Shâh"
  Nabil:0 "Nabil"
+ Nanang:0 "Nanang"
  Nanihi:0 "Nanihi"
  Nasir_ud_Din:0 "Nasir ud Din "
  Nasr_ad_Dn:0 "Nasr ad-Dîn"
  Naufal:0 "Naufal"
  Nawar:0 "Nawar"
  Nerang:0 "Nerang"
+ Ngabdurohman:0 "Ngabdurohman"
+ Ngurawan:0 "Ngurawan"
  Nilam:0 "Nilam"
+ Ningsih:0 "Ningsih"
  Nirmala:0 "Nirmala"
+ Nirwanto:0 "Nirwanto"
  Noh:0 "Noh"
+ Nugroho:0 "Nugroho"
  Nur:0 "Nur"
  Nuutea:0 "Nuutea"
  Nuutea:0 "Nuutea"
@@ -272,6 +347,7 @@
  Palembang:0 "Palembang"
  Palopo:0 "Palopo"
  Palu:0 "Palu"
+ Pamungkas:0 "Pamungkas"
  Pan_Lo:0 "P'an-Lo"
  Panay:0 "Panay"
  Parabung:0 "Parabung"
@@ -288,9 +364,20 @@
  Poenui:0 "Poenui"
  Poerava:0 "Poerava"
  Poso:0 "Poso"
+ Prabowo:0 "Prabowo"
+ Prasetyo:0 "Prasetyo"
+ Prayitno:0 "Prayitno"
+ Prijono:0 "Prijono"
+ Prinia:0 "Prinia"
+ Priono:0 "Priono"
+ Priyanto:0 "Priyanto"
+ Priyo:0 "Priyo"
+ Priyono:0 "Priyono"
  Puaiti:0 "Puaiti"
  Puatea:0 "Puatea"
  Puaura:0 "Puaura"
+ Pulukadang:0 "Pulukadang"
+ Purnomo:0 "Purnomo"
  Puspa:0 "Puspa"
  Puspasari:0 "Puspasari"
  Puspawangi:0 "Puspawangi"
@@ -299,10 +386,12 @@
  Puteri:0 "Puteri"
  Putra:0 "Putra"
  Putri:0 "Putri"
+ Putro:0 "Putro"
  Rabu:0 "Rabu"
  Raden_Sotor:0 "Raden Sotor"
  Raden_Sumirat:0 "Raden Sumirat"
  Raden_Wijaya:0 "Raden Wijaya"
+ Rahayu:0 "Rahayu"
  Rahmat_Shh:0 "Rahmat Shâh"
  Rai:0 "Rai"
  Raihau:0 "Raihau"
@@ -319,8 +408,10 @@
  Rarahu:0 "Rarahu"
  Raunui:0 "Raunui"
  Raurii:0 "Raurii"
+ Respati:0 "Respati"
  Riayat_Shah:0 "Riayat Shah"
  Rim:0 "Rim"
+ Riyanto:0 "Riyanto"
  Sabtu:0 "Sabtu"
  Sagari:0 "Sagari"
  Saktirai:0 "Saktirai"
@@ -329,7 +420,9 @@
  Samprangan:0 "Samprangan"
  Sangkara:0 "Sangkara"
  Sankilang:0 "Sankilang"
+ Santoso:0 "Santoso"
  Sari:0 "Sari"
+ Satrio:0 "Satrio"
  Sayang:0 "Sayang"
  Sayf_ad_Dn:0 "Sayf ad-Dîn"
  Sayf_ar_Rijal:0 "Sayf ar-Rijal"
@@ -352,19 +445,51 @@
  Singhawardhana:0 "Singhawardhana"
  Siraj_ad_Dn:0 "Siraj ad-Dîn"
  Siti:0 "Siti"
+ Soeharto:0 "Soeharto"
+ Soekarno:0 "Soekarno"
+ Sosrodihardjo:0 "Sosrodihardjo"
  Sri:0 "Sri"
  Sri_Gitarja:0 "Sri Gitarja"
+ Subekti:0 "Subekti"
+ Subroto:0 "Subroto"
+ Sudarman:0 "Sudarman"
+ Sudarmo:0 "Sudarmo"
+ Sudarto:0 "Sudarto"
+ Sugeng:0 "Sugeng"
  Sugriwa:0 "Sugriwa"
+ Suharto:0 "Suharto"
  Suhita:0 "Suhita"
  Suib:0 "Suib"
+ Sukanto:0 "Sukanto"
+ Sukarno:0 "Sukarno"
+ Sulastri:0 "Sulastri"
  Sulaymn:0 "Sulaymân"
  Sulaymn_Badr_Shh:0 "Sulaymân Badr Shâh "
  Sulu:0 "Sulu"
+ Sumitro:0 "Sumitro"
+ Sunarti:0 "Sunarti"
+ Supardi:0 "Supardi"
+ Suparman:0 "Suparman"
+ Supriadi:0 "Supriadi"
+ Supriyadi:0 "Supriyadi"
+ Supriyanto:0 "Supriyanto"
+ Supriyono:0 "Supriyono"
  Surabaya:0 "Surabaya"
  Suraprabhawa:0 "Suraprabhawa"
+ Suratinoyo:0 "Suratinoyo"
+ Suratno:0 "Suratno"
  Suriani:0 "Suriani"
  Suriawati:0 "Suriawati"
  Surintan:0 "Surintan"
+ Suryo:0 "Suryo"
+ Suryono:0 "Suryono"
+ Susilowati:0 "Susilowati"
+ Sutrisno:0 "Sutrisno"
+ Suwarni:0 "Suwarni"
+ Suwarno:0 "Suwarno"
+ Suwondo:0 "Suwondo"
+ Suyatno:0 "Suyatno"
+ Suyitno:0 "Suyitno"
  Tahiata:0 "Tahiata"
  Taiana:0 "Taiana"
  Taina:0 "Taina"
@@ -375,6 +500,7 @@
  Taufik:0 "Taufik"
  Taurua:0 "Taurua"
  Tautiare:0 "Tautiare"
+ Teguh:0 "Teguh"
  Teh:0 "Teh"
  Tehani:0 "Tehani"
  Tehea:0 "Tehea"
@@ -391,6 +517,7 @@
  Titaina:0 "Titaina"
  Titaua:0 "Titaua"
  Tondo:0 "Tondo"
+ Trisno:0 "Trisno"
  Tsalenggathu:0 "Tsalenggathu"
  Tsau_Lha:0 "Tsau-Lha"
  Tuah:0 "Tuah"
@@ -410,6 +537,7 @@
  Urarii:0 "Urarii"
  Usop:0 "Usop"
  Uthmn:0 "Uthmân"
+ Utomo:0 "Utomo"
  Vaea:0 "Vaea"
  Vaiana:0 "Vaiana"
  Vaianu:0 "Vaianu"
@@ -422,11 +550,28 @@
  Wangi:0 "Wangi"
  Warna:0 "Warna"
  Wati:0 "Wati"
+ Wibisono:0 "Wibisono"
+ Widianto:0 "Widianto"
+ Widiyanto:0 "Widiyanto"
+ Widodo:0 "Widodo"
+ Widyastuti:0 "Widyastuti"
+ Wiji:0 "Wiji"
  Wikramawardhana:0 "Wikramawardhana"
+ Winoto:0 "Winoto"
  Wira:0 "Wira"
+ Wiranto:0 "Wiranto"
+ Wiro:0 "Wiro"
+ Wisnubroto:0 "Wisnubroto"
+ Wonopati:0 "Wonopati"
+ Wulandari:0 "Wulandari"
  Yahaya:0 "Yahaya"
  Yati:0 "Yati"
+ Yatno:0 "Yatno"
  Yeop:0 "Yeop"
+ Yudho:0 "Yudho"
+ Yudhoyono:0 "Yudhoyono"
+ Yudo:0 "Yudo"
+ Yuwono:0 "Yuwono"
  Zain:0 "Zain"
  Zakaria:0 "Zakaria"
  Zamrud:0 "Zamrud"
